syntax = "proto3";

package Protos.Dto.Carrito.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Carrito.Request";

import "Protos/Models/CarritoSesionModel.proto";

message UpdateCarritoSesionRequest
{
	int32 CarritoSesionId= 1;
	Protos.Models.CarritoSesionModel CarritoSesionModel = 2;
}
