syntax = "proto3";

package Protos.Dto.Carrito.Response;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Carrito.Response";

message DeleteCarritoSesionResponse
{
	bool success = 1;
}