
syntax = "proto3";

package Protos.Dto.Carrito.Response;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Carrito.Response";

import "Protos/Models/CarritoSesionModel.proto";

message GetAllCarritosSesionResponse
{
	bool success = 1;
	repeated Protos.Models.CarritoSesionModel CarritoSesionModelList = 2;
}